# HeadHunter-API

./: README.md  conftest.py  main.py  pyproject.toml  settings.ini
src/: connect_api.py  db_connector.py  dbmanager.py  settings.py  user_interface.py  vacancy.py
src/classes/: connect.py  db_connector.py  vacancy.py
tests/: conftest.py  test.json  test_connect.py  test_connect_api.py  test_db_connector.py  test_vacancy.py
